--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
+    android:label="NavGraph"
     app:startDestination="@id/titleFragment">
     <fragment
         android:id="@+id/titleFragment"
@@ -26,4 +27,9 @@
         android:name="com.example.justatimerandcounter.CounterFragment"
         android:label="@string/counter_fragment_header"
         tools:layout="@layout/fragment_counter" />
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.example.justatimerandcounter.AboutFragment"
+        android:label="About"
+        tools:layout="@layout/fragment_about" />
 </navigation>
