--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -30,6 +30,6 @@
     <fragment
         android:id="@+id/aboutFragment"
         android:name="com.example.justatimerandcounter.AboutFragment"
-        android:label="About"
+        android:label="@string/about_fragment_header"
         tools:layout="@layout/fragment_about" />
 </navigation>
